syntax = "proto3";

import "google/api/annotations.proto";

option csharp_namespace = "intuito.api.greeter.Protos";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply){
   option (google.api.http) = {
      get: "/intuito/v1/greeter/{name}"
    };
  }

  rpc SayHelloFrom (HelloRequestFrom) returns (HelloReply) {
    option (google.api.http) = {
      post: "/intuito/v1/greeter/"
      body: "*"
    };
  }

  rpc NuevoMetodo (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/intuito/v1/nuevo-greeter/"
      body: "*"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message HelloRequestFrom {
  string name = 1;
  string from = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}



